/*
 * $Id$
 */

/* Use this format for the entry headers:
   YYYY-MM-DD HH:MM UTC[-|+]hhmm Your Full Name <your_email@address>
   For example:
   2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
*/

2013-03-24 20:14 UTC+0100 Enrico Maria Giordano <e.m.giordano@emagsoftware.it>
  * contrib/gd/source/gdbar.prg
  * contrib/gd/source/gdbarcode.prg
  * contrib/gd/source/gdchart.prg
  * contrib/libnf/aredit.prg
  * contrib/libnf/clrsel.prg
  * contrib/libnf/dispmsg.prg
  * contrib/libnf/dosver.prg
  * contrib/libnf/menu1.prg
  * contrib/libnf/menuto.prg
  * contrib/libnf/mouse1.prg
  * contrib/libnf/pegs.prg
  * contrib/libnf/popadder.prg
  * contrib/libnf/sqzn.prg
  * contrib/libnf/tbwhile.prg
  * contrib/libnf/xbox.prg
  * contrib/libnf/dfile.prg
  * contrib\xwt\src\hex.prg
  * contrib\xwt\src\widget.prg
  * contrib\gtwvg\wvtclass.prg
  * contrib\gtwvg\wvtpaint.prg
    ! fixed assigned but not used variable

2013-03-24 19:05 UTC+0200 Saulius Zrelskis <labitas/AT/gmail/com>
  * xharbour/include/hbclass.ch
    ! more nScope hiddings

2013-03-24 14:56 UTC+0100 Enrico Maria Giordano <e.m.giordano@emagsoftware.it>
  * source/tip/sendmail.prg
    ! fixed assigned but not used variable

2013-03-21 12:45 UTC+0200 Saulius Zrelskis <labitas/AT/gmail/com>
  * source/compiler/ppcomp.c
    ! fixed memory leak on using -u switch

  * include/std.ch
    ! hide GetList assigning but not using

  * xharbour/include/hbclass.ch
    ! hide nScope assigning but not using

  * source/rtl/tbcolumn.prg
    ! fixed assigned but not used variable, hidden with #pragma w2

2013-03-21 10:25 UTC+0200 Saulius Zrelskis <labitas/AT/gmail/com>
  * source/cgi/hjwindow.prg
  * source/cgi/hterrsys.prg
  * source/cgi/htjlist.prg
  * source/cgi/htmutil.prg
  * source/cgi/tcgi.prg
  * source/cgi/tedit.prg
  * source/cgi/thtm.prg
  * source/ct/alt/ctwin.prg
  * source/ct/alt/dattime2.prg
  * source/ct/diskutil.prg
  * source/ct/getinfo.prg
  * source/ct/getsecrt.prg
  * source/ct/setkeys.prg