@@ -1538,6 +1538,12 @@ static BOOL hb_gt_def_Info( PHB_GT pGT, int iType, PHB_GT_INFO pInfo )
                pInfo->pResult = hb_itemPutC( pInfo->pResult, NULL );
          }
          break;
+         
+      case HB_GTI_CLIPBOARDPAST:
+         if( HB_GTSELF_INFO( pGT, HB_GTI_CLIPBOARDDATA, pInfo ) )
+            HB_GTSELF_INKEYSETTEXT( pGT, hb_itemGetCPtr( pInfo->pResult ),
+                                         hb_itemGetCLen( pInfo->pResult ) );
+         break;
 
       case HB_GTI_NOTIFIERBLOCK:
          if( pGT->pNotifierBlock )
