@@ -8,6 +8,10 @@
    2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
 */
 
+2013-03-24 22:40 UTC-200 Luiz Rafael Culik <luiz/AT/xharbour/com/br>
+  * source/rtl/hbgtcore.c
+    ! added missing HB_GTI_CLIPBOARDPAST
+
 2013-03-24 20:14 UTC+0100 Enrico Maria Giordano <e.m.giordano@emagsoftware.it>
   * contrib/gd/source/gdbar.prg
   * contrib/gd/source/gdbarcode.prg
